name:                tempus
version:             0.1.0.0
synopsis:            A pragmatic time and date library.
description:         Comparison with time and unix-time here.
license:             MIT
license-file:        LICENSE
author:              Lars Petersen
maintainer:          lars@nyantec.com
copyright:           Lars Petersen
category:            Data
build-type:          Simple
cabal-version:       >=1.10

Library
  build-depends:     base < 5
                   , text
                   , bytestring
                   , attoparsec
                   -- FIXME: to be removed later on
                   , time
  ghc-options:       -Wall
  hs-source-dirs:    .
  default-language:  Haskell98
  exposed-modules:   Data.Tempus
                   , Data.Tempus.GregorianCalendar
                   , Data.Tempus.Rfc3339
                   , Data.Tempus.GregorianTime
                   , Data.Tempus.UnixTime
                   , Data.Tempus.Epoch
                   , Data.Tempus.RealtimeClock
  other-modules:     Data.Tempus.GregorianTime.Type
                   , Data.Tempus.GregorianTime.FromUnixTime
                   , Data.Tempus.Rfc3339.Parser
                   , Data.Tempus.Rfc3339.Builder
                   , Data.Tempus.UnixTime.Type
                   , Data.Tempus.UnixTime.FromGregorianTime

Test-Suite test
  type:              detailed-0.9
  ghc-options:       -Wall
  hs-source-dirs:    tests .
  test-module:       Test
  other-modules:     Data.Tempus
                   , Data.Tempus.GregorianCalendar
                   , Data.Tempus.Rfc3339
                   , Data.Tempus.GregorianTime
                   , Data.Tempus.UnixTime
                   , Data.Tempus.Epoch
                   , Data.Tempus.RealtimeClock
                   -- in library unexposed modules
                   , Data.Tempus.GregorianTime.Type
                   , Data.Tempus.GregorianTime.FromUnixTime
                   , Data.Tempus.Rfc3339.Parser
                   , Data.Tempus.Rfc3339.Builder
                   , Data.Tempus.UnixTime.Type
                   , Data.Tempus.UnixTime.FromGregorianTime
  build-depends:     base < 5
                   , text
                   , bytestring
                   , attoparsec
                   , time
                   -- additional deps for testing
                   , Cabal
                   , cabal-test-quickcheck >= 0.1.2 && < 0.2
                   , QuickCheck
  default-language:  Haskell98