name:                tempus
version:             0.1.0.0
stability:           experimental
synopsis:            A pragmatic time and date library.
description:         Comparison with time and unix-time here.
license:             MIT
license-file:        LICENSE
author:              Lars Petersen
maintainer:          lars@nyantec.com
copyright:           Lars Petersen
category:            Data
build-type:          Simple
cabal-version:       >=1.10


Library
  build-depends:     base < 5
                   , text
                   , bytestring
                   , attoparsec
                   , clock >= 0.3 && < 0.5
  ghc-options:       -Wall
  hs-source-dirs:    .
  default-language:  Haskell98
  exposed-modules:   Data.Tempus
                   , Data.Tempus.Class
                   , Data.Tempus.Class.Epoch
                   , Data.Tempus.Class.Midnight
                   , Data.Tempus.Class.IsDate
                   , Data.Tempus.Class.IsTime
                   , Data.Tempus.Class.IsUnixTime
                   , Data.Tempus.Class.HasUnixTime
                   , Data.Tempus.Date
                   , Data.Tempus.Time
                   , Data.Tempus.DateTime
                   , Data.Tempus.Local
                   , Data.Tempus.Rfc3339
                   , Data.Tempus.UnixTimestamp
                   , Data.Tempus.Internal
  other-modules:     Data.Tempus.Rfc3339.Parser
                   , Data.Tempus.Rfc3339.Builder

Test-Suite test
  type:              detailed-0.9
  ghc-options:       -Wall
  hs-source-dirs:    tests .
  test-module:       Test
  other-modules:     Data.Tempus
                   , Data.Tempus.Class
                   , Data.Tempus.Class.Epoch
                   , Data.Tempus.Class.Midnight
                   , Data.Tempus.Class.IsDate
                   , Data.Tempus.Class.IsTime
                   , Data.Tempus.Class.IsUnixTime
                   , Data.Tempus.Class.HasUnixTime
                   , Data.Tempus.Date
                   , Data.Tempus.Time
                   , Data.Tempus.DateTime
                   , Data.Tempus.Local
                   , Data.Tempus.Rfc3339
                   , Data.Tempus.UnixTimestamp
                   -- in library unexposed modules
                   , Data.Tempus.Rfc3339.Parser
                   , Data.Tempus.Rfc3339.Builder
                   , Data.Tempus.Internal
  build-depends:     base < 5
                   , text
                   , bytestring
                   , attoparsec
                   , clock >= 0.3 && < 0.5
                   -- additional deps for testing
                   , Cabal
                   , cabal-test-quickcheck >= 0.1.2 && < 0.2
                   , QuickCheck
  default-language:  Haskell98