name:                utc
version:             0.1.0.0
stability:           experimental
synopsis:            A pragmatic time and date library.
description:         This is a work in progress!

                     Try it out and play with it. Tell me what you think
                     about the API and function naming, but __DON'T USE IT
                     IN PRODUCTION YET!__

                     Bug reports or (even better) tests are welcome.
license:             MIT
license-file:        LICENSE
author:              Lars Petersen
maintainer:          lars@nyantec.com
copyright:           Lars Petersen
category:            Data
build-type:          Simple
cabal-version:       >=1.10

Library
  build-depends:     base < 5
                   , text
                   , bytestring
                   , attoparsec
                   , clock >= 0.3 && < 0.5
  ghc-options:       -Wall
  hs-source-dirs:    .
  default-language:  Haskell98
  exposed-modules:   Data.UTC
                   , Data.UTC.Class
                   , Data.UTC.Class.Epoch
                   , Data.UTC.Class.Midnight
                   , Data.UTC.Class.IsDate
                   , Data.UTC.Class.IsTime
                   , Data.UTC.Class.IsUnixTime
                   , Data.UTC.Class.HasUnixTime
                   , Data.UTC.Type
                   , Data.UTC.Type.Date
                   , Data.UTC.Type.Time
                   , Data.UTC.Type.DateTime
                   , Data.UTC.Type.Local
                   , Data.UTC.Rfc3339
  other-modules:     Data.UTC.Rfc3339.Parser
                   , Data.UTC.Rfc3339.Builder
                   , Data.UTC.Internal

Test-Suite test
  type:              detailed-0.9
  ghc-options:       -Wall
  hs-source-dirs:    tests .
  test-module:       Test
  other-modules:     Data.UTC
                   , Data.UTC.Class
                   , Data.UTC.Class.Epoch
                   , Data.UTC.Class.Midnight
                   , Data.UTC.Class.IsDate
                   , Data.UTC.Class.IsTime
                   , Data.UTC.Class.IsUnixTime
                   , Data.UTC.Class.HasUnixTime
                   , Data.UTC.Type
                   , Data.UTC.Type.Date
                   , Data.UTC.Type.Time
                   , Data.UTC.Type.DateTime
                   , Data.UTC.Type.Local
                   , Data.UTC.Rfc3339
                   -- in library unexposed modules
                   , Data.UTC.Rfc3339.Parser
                   , Data.UTC.Rfc3339.Builder
                   , Data.UTC.Internal
  build-depends:     base < 5
                   , text
                   , bytestring
                   , attoparsec
                   , clock >= 0.3 && < 0.5
                   -- additional deps for testing
                   , Cabal
                   , cabal-test-quickcheck >= 0.1.2 && < 0.2
                   , QuickCheck
  default-language:  Haskell98